--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,8 @@
     "pg": "^8.10.0"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
+    "@types/pg": "^8.15.6",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
   }
