--- a/.github/workflows/workflow-dev.yml
+++ b/.github/workflows/workflow-dev.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Frontend build
         run: |
           if [ -f "package.json" ]; then
-            npm ci && npm run build
+            npm ci && npm test
           else
-            echo "No package.json found — skipping frontend build."
+           echo "No package.json found — skipping frontend tests."
           fi
