--- a/.github/workflows/workflow-prod.yml
+++ b/.github/workflows/workflow-prod.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Frontend build
         run: |
           if [ -f "package.json" ]; then
-            npm ci && npm run build
+            npm ci && npm test
           else
             echo "No package.json found — skipping frontend build."
           fi
