chore(test): install and configure Vitest for API testing environment

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "tsc",
     "start": "tsx src/server.ts",
-    "dev": "tsx src/server.ts"
+    "dev": "tsx src/server.ts",
+    "test": "vitest"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.0",
@@ -16,7 +17,10 @@
   "devDependencies": {
     "@types/node": "^24.10.0",
     "@types/pg": "^8.15.6",
+    "@types/supertest": "^6.0.3",
+    "supertest": "^7.1.4",
     "tsx": "^4.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.9.3",
+    "vitest": "^3.2.4"
   }
 }
