--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,84 @@
-# ───────────────────────────────
-# 🚀 Node & TypeScript
-# ───────────────────────────────
+# ==========================================
+# ⚙️ Core Node / TypeScript
+# ==========================================
 node_modules/
 dist/
 build/
-.env
-.env.local
-.env.development
-.env.production
-.env.test
+*.tsbuildinfo
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# ───────────────────────────────
-# 🧱 TypeScript
-# ───────────────────────────────
-*.tsbuildinfo
+# ==========================================
+# 🧩 Environment Files
+# ==========================================
+.env
+.env.*
+!.env.example
+api/.env
+api/.env.*
+frontend/.env
+frontend/.env.*
 
-# ───────────────────────────────
-# 🐳 Docker
-# ───────────────────────────────
+# ==========================================
+# 🧱 API (Fastify + TypeScript + Vitest)
+# ==========================================
+api/node_modules/
+api/dist/
+api/build/
+api/logs/
+api/coverage/
+api/reports/
+api/test-results/
+api/*.log
+api/*.tsbuildinfo
+
+# ==========================================
+# 🖥️ Frontend (JS + Jest)
+# ==========================================
+frontend/node_modules/
+frontend/dist/
+frontend/build/
+frontend/coverage/
+frontend/test-results/
+frontend/*.log
+frontend/*.tsbuildinfo
+
+# ==========================================
+# 🗄️ Database / Volumes
+# ==========================================
+database/data/
+database/pgdata/
+database/*.db
+database/*.log
+
+# ==========================================
+# 🐳 Docker / Compose / Artifacts
+# ==========================================
 .docker/
 docker-compose.override.yml
 docker-compose.dev.yml
 docker-compose.prod.yml
-*.tar
 *.pid
+*.tar
+*.tgz
+*.zip
+*.tmp
+*.bak
 
-# ───────────────────────────────
-# 🧩 IDEs & OS
-# ───────────────────────────────
+# ==========================================
+# 🧪 Tests & Coverage (root orchestration)
+# ==========================================
+coverage/
+reports/
+test-results/
+jest-html-reporters-*.html
+
+# ==========================================
+# 🧰 IDE / OS Files
+# ==========================================
 .vscode/
 .idea/
 *.swp
@@ -40,24 +86,18 @@ docker-compose.prod.yml
 .DS_Store
 Thumbs.db
 
-# ───────────────────────────────
-# 🧪 Coverage & Tests
-# ───────────────────────────────
-coverage/
-jest-html-reporters-*.html
-*.test.ts
-*.spec.ts
-reports/
-test-results/
-
-# ───────────────────────────────
-# 📁 Project-specific
-# ───────────────────────────────
-api/node_modules/
-api/dist/
-api/.env
-database/data/
-frontend/node_modules/
-frontend/dist/
-frontend/.env
+# ==========================================
+# 🧾 Project-specific
+# ==========================================
 .summary/
+logs/
+tmp/
+
+# ==========================================
+# ✅ Keep documentation & workflows
+# ==========================================
+!.github/
+!.github/workflows/
+!.github/workflows/*.yml
+!tickets/
+!tickets/*.md
