chore(workspace): configure npm monorepo test orchestration
- add root package.json with workspaces support
- update api/frontend package.json scripts for test orchestration

--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
     "build": "tsc",
     "start": "tsx src/server.ts",
     "dev": "tsx src/server.ts",
-    "test": "vitest"
+    "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
     "@fastify/cors": "^10.0.0",
