--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "test": "jest --ci --passWithNoTests"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
